@@ -1,6 +1,7 @@
 Release Note
 
 * current
+  * forcing ddmBackEnd=rucio for anal tasks
   * changed copyArchive to kick assigned analysis jobs if they are not activated in 12h
   * changed for maxAttemptES
   * enabled ES merging
